--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cloudinary": "^1.38.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
