--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ SECRET_KEY = dhshhjgfszgjdshmd
 CLOUD_NAME = dm6j6w2qy
 API_KEY = 638663727865259
 API_SECRET = jzo6c6vLWHHScmwoIQFi3RdvbBs
+FRONTEND_URL = https://jobportal-frontend-eoer.onrender.com
